--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,15 +32,7 @@
     "files.trimFinalNewlines": true,
     "files.encoding": "utf8",
     "files.eol": "\n",
-    "files.exclude": {
-        "**/__pycache__": true,
-        "**/*.pyc": true,
-        "**/.pytest_cache": true,
-        "**/.mypy_cache": true,
-        "**/venv": true,
-        "**/.venv": true,
-        "**/.env": false
-    },
+    "files.exclude": {},
     // Python налаштування
     "python.analysis.typeCheckingMode": "basic",
     "python.analysis.autoImportCompletions": true,
